Revised Ignore slide content and example

--- a/presentations/_posts/ignore/0002-01-01-title.md
+++ b/presentations/_posts/ignore/0002-01-01-title.md
@@ -5,15 +5,12 @@ title: ''
 tags: ['ignore']
 ---
 
-	$ vim .gitignore
+In project root...
 
-	#Add glob patterns, one per line
-	*.log
-	*.tmp
+	$ vi .gitignore
 
-	$ vim .gitignore
+glob patterns, one per line
 
-	#Add glob patterns, one per line
 	*.log
 	*.tmp
 	target
