Refined commit, setup slides, new mv-rm slides

--- a/presentations/_posts/commit/0003-01-01-title.md
+++ b/presentations/_posts/commit/0003-01-01-title.md
@@ -5,6 +5,16 @@ title: ''
 tags: ['commit']
 ---
 
+<div class="sticky">
+	<span><i class="icon-shopping-cart"> </i></span>
+
+	commit concept
+</div>
+
+<!---
+Shopping Cart
+
 * put things in
 * take things out 
 * purchase at register
+-->
