--- a/presentations/_posts/network/0002-01-01-title.md
+++ b/presentations/_posts/network/0002-01-01-title.md
@@ -5,8 +5,9 @@ title: ''
 tags: ['network']
 ---
 
-	git commit
+Offline design
 
-* Transactionally save code snapshot
-* Commit to local branch
-* Operate on local disk
+* Local repository is a full copy of the remote 
+* Clone fetches all branches and tags 
+* Almost all activities happen offline (local disk) 
+* Offline activities are push-ed to remotes
