--- a/presentations/_posts/network/0003-01-01-title.md
+++ b/presentations/_posts/network/0003-01-01-title.md
@@ -5,6 +5,12 @@ title: ''
 tags: ['network']
 ---
 
+	git commit
+
+* Transactionally save code snapshot
+* Commit to local branch
+* Operate on local disk
+
 	git push <remote>
 
 * Send code to an upstream server
