--- a/presentations/_posts/setup/0001-01-01-title.md
+++ b/presentations/_posts/setup/0001-01-01-title.md
@@ -1,9 +1,13 @@
 ---
-chapter: Title
+chapter: Setup
 layout: slide
 title: ''
 tags: ['setup']
 ---
 
-GitHub Account
-<a href="http://github.com/signup/free">http://github.com/signup/free</a>
+<div class="sticky">
+	<span><i class="icon-github"> </i></span>
+
+	GitHub Account
+	<a href="http://github.com/signup/free">http://github.com/signup/free</a>
+</div>
